hphp/hack/test/typecheck/reserved_name26.php.exp
File "reserved_name26.php", line 5, characters 7-13:
Boolean cannot be used as it is reserved. (Naming[2068])
