hphp/hack/test/typecheck/reserved_name26.php
<?hh

namespace Foo;

class Boolean {}
